# bmi_pytorch

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  bmi_grid.py  bmi_model.py  config.py  model.py  pytest.ini  requirements.txt
.github/workflows/: pytest.yml
bmi_pytorch/: pyproject.toml
bmi_pytorch/bmi_pytorch/: bmi_model.py  model.py  utils.py
bmi_pytorch/bmi_pytorch/test/: conftest.py
bmi_pytorch/tests/: conftest.py  test_bmi_model.py  test_model.py
bmi_sdk/: pyproject.toml
bmi_sdk/bmi_sdk/: __init__.py  bmi_grid.py  bmi_minimal.py  bmi_time.py  bmi_variable.py  exceptions.py
bmi_sdk/tests/: test_bmi_time.py  test_bmi_variable.py
scripts/: download_camels.sh
src/: bmi_minimal.py  utils.py
src/bmi_pytorch/: pyproject.toml
src/bmi_pytorch/bmi_pytorch/: model.py
src/bmi_pytorch/bmi_pytorch/test/: conftest.py  test_model.py
src/bmi_sdk/: pyproject.toml
test/: conftest.py  test_bmi_model.py  test_model.py
